# jam0003

./: .bazelrc  .gitignore  CMakeLists.txt  Cargo.toml  README.md
BASIS/: README.md  TEAM
TEMPLATE/: README.md  TEAM
apilar/: .gitignore  Cargo.toml  LICENSE  README.md  TEAM
apilar/sample_code/: replicator.apil  world-replicator.apil
apilar/src/: assembler.rs  computer.rs  direction.rs  instruction.rs  main.rs  memory.rs  processor.rs  render.rs  run.rs  single.rs  starter.rs  testutil.rs  world.rs
arrow-asm/: BUILD.bazel  Makefile  README.md  TEAM  WORKSPACE  user.bazelrc
arrow-asm/foreign/: BUILD.bazel  llvm.bzl
arrow-asm/src/: BUILD.bazel  main.cc
arrow-asm/src/ast/: BUILD.bazel  ast.hh  bytecode_emitter.cc  bytecode_emitter.hh
arrow-asm/src/bytecode/: BUILD.bazel  bytecode.hh  interpreter.cc  interpreter.hh  opcodes.hh
arrow-asm/src/codegen/: BUILD.bazel  codegen.cc  codegen.hh  codegen_test.cc
arrow-asm/src/example/: BUILD.bazel  Test.g4  hello.cc  hello_world.cc  hello_world.hh  llvm_test.cc  llvm_test.hh
arrow-asm/src/parser/: Aasm.g4  BUILD.bazel  _BeautifulAsm.g4  ast_builder_visitor.cc  ast_builder_visitor.hh  parser.cc  parser.hh
arrow-asm/src/parser/.antlr/: BeautifulAsmParser.java
arrow-asm/test/: BUILD.bazel  bytecode_unit_tests.cc  hello_test.cc  nop_test.cc
arrow-asm/test/ast/: lower_ast_test.cc
arrow-asm/test/bytecode/: interpret_test.cc
arrow-asm/test/parser/: grammar_test.cc  parser_test.cc
arrow-asm/test/test_programs/: BUILD.bazel  arrow.aasm  branch.aasm  exit.aasm  fib.aasm  hello_world.aasm  memory.aasm  simple.aasm  statements.aasm  test_complex_type.aasm  test_stuff.aasm  types.aasm
asmscript/: .editorconfig  .gitignore  Asms.cpp  Common.h  Compiler.cpp  Compiler.h  LICENSE  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  README.md  Runtime.cpp  Runtime.h  build.sh
assembly-with-a-time-signature/: .gitignore  Cargo.toml  README.md  TEAM  lwb.toml
assembly-with-a-time-signature/examples/: chord.asm  feel.asm  instrument.asm  little_star.asm  piano-man.asm  std.asm  test.asm
assembly-with-a-time-signature/object/src/: common.rs  elf.rs
assembly-with-a-time-signature/object/src/write/: mod.rs
assembly-with-a-time-signature/object/src/write/elf/: object.rs
assembly-with-a-time-signature/object/testfiles/: README.md
assembly-with-a-time-signature/object/testfiles/coff/: relocs_overflow.c
assembly-with-a-time-signature/object/testfiles/elf/: base  base-aarch64  base-loongarch64  base-mips64el  base-strip  base.sh  bpf.c  bpf.sh  comdat.sh  initarray  initarray.c  initarray.sh  nostd  nostd.sh  symtab_shndx.c  symtab_shndx.sh
assembly-with-a-time-signature/object/testfiles/pe/: base.c  comdat.cc
assembly-with-a-time-signature/object/testfiles/wasm/: base.wasm
assembly-with-a-time-signature/src/: build.rs  desugar.rs  elf.rs  lib.rs  main.rs  vm.rs
assembly-with-a-time-signature/src/instruction_code/: mod.rs  unlinked.rs
assembly-with-a-time-signature/src/midi/: mod.rs  notes.rs
assembly-with-a-time-signature/src/parser/: asm.syntax  mod.rs
assembly-with-a-time-signature/src/parser/ast/: ast.rs  ast_impls.rs  from_pairs.rs  mod.rs  parser.rs
bam/: .history  Cargo.toml  README.md  TEAM  TEAM copy
bam/.cargo/: config.toml
bam/examples/: fact.bam  factorial.bam  fib.bam  hello.bam
bam/src/: compiler.rs  eval.rs  lexer.rs  main.rs  parser.rs  stream.rs  syntax.rs  types.rs  util.rs  vm.rs
beautiful-cheese/: LICENSE.md  README.md  TEAM  out.rb
block-lang/: .gitignore  Cargo.toml  README.md  book.toml  flake.nix  rustfmt.toml
block-lang/.github/workflows/: mdbook.yml
block-lang/pages/: SUMMARY.md  build_instruction.md  how_to_use.md  introduction.md
block-lang/src/: block.rs  block_to_expr.rs  cli.rs  expr.rs  main.rs  mouseover.rs  name.rs  parse.rs  placing.rs  ui.rs
block-lang/src/expr/: bind.rs  reduce.rs
cherry/: README.md  TEAM  package-lock.json  package.json  tsconfig.json  vite.config.ts
clockwork-computation/: README.md  TEAM  example.cc  jsconfig.json  lang.g4  package-lock.json  package.json  tscconfig.json  tsconfig.json
core/: README.md  README.md.txt  TEAM  core.py
docs/: index.md
excavator/: .gitignore  CMakeLists.txt  README.md  TEAM  example_code.excv
excavator/examples/: diag.excv  line.excv  square.excv
excavator/src/ast/exprs/: addexpr.cc  addexpr.h  mulexpr.cc  mulexpr.h  numberexpr.h  specialexpr.cc  specialexpr.h  variableexpr.cc  variableexpr.h
excavator/src/ast/instructions/: generateinstruction.cc  generateinstruction.h  instruction.h
excavator/src/parsing/: lexer.cc  lexer.h  parser.cc  parser.h  streampos.h  token.cc  token.h
excavator/src/runtime/: combinationvalue.cc  combinationvalue.h  command.cc  command.h  drawer.h  interpreter.cc  interpreter.h  simulation.cc  simulation.h  state.h  terminal_drawer.h
excavator/src/runtime/values/: combinationvalue.cc  combinationvalue.h  numbervalue.cc  repeatvalue.cc  specialvalue.cc  value.cc  value.h
excavator/src/utils/: erroror.h
factory/: README.md  TEAM  factory.py
fmt-js/: README.md  fmt-js.fmt  fmt-js.html  fmt-js.js  fmt-js.ohm
fuzzlebut/: .gitignore  Cargo.toml  README.md  TEAM  build  idea.md  run
lovely/: .gitignore  Cargo.toml  README.md  TEAM
lurxon/: README.md  TEAM  gleam.toml  manifest.toml
nadya/: Cargo.toml  README.md
prasm/: README.md  prasm.py  prelude.nasm  requirements.txt
seq_sel_itr/: Cargo.toml  README.md  TEAM
src/: BUILD  Token.h  ast.rs  drawer.cc  drawer.h  grid.cc  grid.h  lexer.cc  lexer.cpp  lexer.h  main.cc  main.rs  parser.cc  parser.h  terminal_drawer.cc  terminal_drawer.h  token.cc  token.h  util.rs  utils.h  value.cc  value.h
stackgrid/: .gitignore  README.md  TEAM  cli.js  index.js  package-lock.json  package.json  stackgrid.js
taf/: .gitignore  Cargo.toml  README.md  TEAM
taf/src/: data.rs  heresy.rs  lib.rs  machine.rs  main.rs  repl.taf  uxlol.rs
tally-thing/: Pipfile  README.md  TEAM
threebly/: README.md  TEAM  Threebly.cabal  test.thrb
tux/: Cargo.toml  README.md  TEAM
x86-art/: Cargo.toml  README.md  TEAM  docs.md
(+284 files in other folders)
