[package]
name = "apilar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
moveslice = "2.0.1"
rand = { version = "0.8.5", features = ["small_rng"]}
strum = "0.24"
strum_macros = "0.24"
