[package]
name = "assembly-with-a-time-signature"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[[bin]]
path="src/main.rs"
name="masm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lwb-parser = "0.1.7"
object = {version="0.29.0", features=["write", "read"], path="./object"}
clap = {version="3.2.14", features=["cargo"]}
num_enum = "0.5.7"
portmidi = "0.2.6"
soundfont = "0.0.1"

[build-dependencies]
lwb-parser = "0.1.7"
