[package]
name = "bam"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.8.0"
lazy_static = "1.4.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
clap = { version = "3.2.14", features = [ "derive" ] }
rustyline = "10.0.0"
ansi_term = "0.12.1"

