[package]
name = "tafokr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ariadne = "0.1.5"
clap = { version = "3.1.6", features = [ "derive" ] }
colored = "2.0.0"
combine = "4.6.4"
lazy_static = "1.4.0"
rustyline = "10.0.0"
